Fixed alignment on collection item artist name.

--- a/src/app/assets/scss/partials/_collections.scss
+++ b/src/app/assets/scss/partials/_collections.scss
@@ -32,7 +32,7 @@
 }
 
 .collection-item_artist {
-	margin: 0 !important;
+	margin: 0 0 3px !important;
 }
 
 .collection-item_name {
